School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_If_While/only_else.deca
//Tester en mettant seulement un else
//erreur attendue : (casse dans l'étape A) mismatched input 'else' expecting {'instanceof', ... '}'

{
    int i = 10;
    else{
        println(i);
    }
}